# KKI

./: .gitignore  1ZfmcOiIdX9H3iOFxzFAnpPPg_By7O7jL  Brewfile  LICENSE  README.md  commitment_protokoll.py  kki_commitment.py  kki_runtime.py  kooperation_test.py  kooperation_visual.py  pyproject.toml  requirements-dev.txt  requirements.txt  schwarm_100.py  schwarm_adaptive_netzwerke.py  schwarm_anti_polarisierung.py  schwarm_arbeitsketten.py  schwarm_arbeitszellen.py  schwarm_arbeitszellen_parallel.py  schwarm_audit_telemetrie.py  schwarm_bauphasen_blueprint.py  schwarm_bauphasen_pilot.py  schwarm_bauphasen_rollout.py  schwarm_bauphasen_stresstest.py  schwarm_beziehungsgedaechtnis.py  schwarm_cluster.py  schwarm_commitment_resilienz.py  schwarm_dna_schema.py  schwarm_engpassmanagement.py  schwarm_faehigkeitsarbitration.py  schwarm_faehigkeitscluster.py  schwarm_fehlerisolation.py  schwarm_freigabe_workflow.py  schwarm_gekoppelte_abwehr.py  schwarm_governance_layer.py  schwarm_grossstudie.py  schwarm_gruppenbildung.py  schwarm_gruppenbootstrap.py  schwarm_gruppenhandoff.py  schwarm_gruppenidentitaet.py  (+43 more)
.claude/: settings.json
Formula/: kki.rb
kki/: __init__.py  absolut_charta.py  adaptations_manifest.py  adaptiv_schwarm_kodex.py  adaptive_systeme_senat.py  alfven_wellen_kodex.py  algorithmen_senat.py  allianz_vertrag.py  arbeitsgedaechtnis_register.py  astrophysik_feld.py  astrophysik_verfassung.py  aufmerksamkeits_charta.py  aufmerksamkeits_senat.py  auktions_senat.py  autonomy_governor.py  autopoiesis_charta.py  autoritaets_dekret.py  bandstruktur_charta.py  benchmark_harness.py  bewusstseins_pakt.py  bewusstseins_senat.py  bifurkations_register.py  biophysik_feld.py  boltzmann_senat.py  bose_einstein_charta.py  bundes_charta.py  capacity_planner.py  carnot_manifest.py  (+328 more)
(+25 files in other folders)
