[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kki"
version = "0.1.0"
description = "Kollektive Künstliche Intelligenz — Terra-Schwarm Leitstern, Multi-Agenten-KI-Architektur"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "janniklas123jnz-beep", email = "janniklas123.jnz@gmail.com" },
]
keywords = ["ai", "swarm", "multi-agent", "collective-intelligence", "kki", "leitstern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "hdbscan",
    "matplotlib",
    "networkx",
    "numpy",
    "polars",
    "pyarrow",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "click",
    "debugpy",
    "icecream",
    "loguru",
    "pytest",
    "pytest-sugar",
    "pytest-xdist",
    "rich",
    "textual",
    "typer",
]

[project.urls]
Homepage = "https://github.com/janniklas123jnz-beep/KKI"
Repository = "https://github.com/janniklas123jnz-beep/KKI"
Issues = "https://github.com/janniklas123jnz-beep/KKI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kki*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["smoke_tests.py", "*_test.py", "test_*.py"]
